# zoho-cli

./: .env.test  .gitignore  AGENTS.md  PROMPT.md  README.md  SKILL.md  mise.toml  pyproject.toml
.beads/: config.yaml
.tickets/: zc-05hv.md  zc-05t5.md  zc-06pa.md  zc-0apo.md  zc-0cy9.md  zc-0ifa.md  zc-0nge.md  zc-0tso.md  zc-0vc7.md  zc-0ww5.md  zc-10zs.md  zc-13rs.md  zc-1dlz.md  zc-1g8v.md  zc-1h8r.md  zc-1rkw.md  zc-213y.md  zc-21jt.md  zc-27zz.md  zc-298h.md  zc-29sr.md  zc-2ems.md  zc-2giw.md  zc-2hxy.md  zc-2n4j.md  zc-2riy.md  zc-2rz9.md  zc-2wam.md  zc-2ysg.md  zc-31md.md  zc-32p8.md  zc-33yv.md  zc-33z3.md  zc-34rd.md  zc-3a7n.md  zc-3arl.md  zc-3axn.md  zc-3j2i.md  zc-3xgp.md  zc-3ykl.md  (+241 more)
internal/: bigin_integration_test.go  billing_integration_test.go  books_integration_test.go  cliq_integration_test.go  creator_integration_test.go  crm_integration_test.go  desk_integration_test.go  drive_integration_test.go  errors.go  expense_integration_test.go  flags.go  helpers_test.go  integration_test.go  inventory_integration_test.go  invoice_integration_test.go  mail_integration_test.go  people_integration_test.go  projects_integration_test.go  recruit_integration_test.go  sheet_integration_test.go  sign_integration_test.go  sprints_integration_test.go  writer_integration_test.go
references/: api-quirks.md  commands.md  currencies.yml  customers.yml  expense-categories.yml  expense-reports.yml  expenses.yml  organizations.yml  projects.yml  receipts.yml  reporting-tags.yml  taxes.yml  trips.yml  users.yml  workdrive.json
scripts/: panelist_context.md  (+2 more)
(+89 files in other folders)
