[project]
name = "zoho-cli"
version = "0.1.0"
description = "Command-line interface for Zoho REST APIs (CRM, Projects, WorkDrive, Writer, Cliq)"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
authors = [{ name = "RHI", email = "dev@rhi.com" }]
keywords = ["zoho", "cli", "crm", "projects", "workdrive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
]
dependencies = [
    "cappa>=0.31",
    "httpx>=0.28",
    "tomli-w>=1.0",
    "rich>=13.0",
]

[project.scripts]
zoho = "zoho_cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zoho_cli"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow/integration (deselect with '-m \"not slow\"')",
]
